<resources>
    <string name="app_name">mPOS</string>
    <string name="email_id">Email-Id</string>
    <string name="pin">Pin</string>
    <string name="register">Register</string>
    <string name="title_activity_dashboard_screen">Sale</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AatreyPhone(018)</string>
    <string name="nav_header_subtitle">Aatrey Vyas</string>
    <string name="nav_header_desc">POS</string>
    <string name="action_settings">Settings</string>
    <string name="subtotal">Subtotal</string>
    <string name="no_item">No Item Is Added to Sale</string>
    <string name="amount">Amount</string>
    <string name="unit">Unit</string>
    <string name="qty">Qty</string>
    <string name="item">Item</string>
    <string name="anon_customer">Anon Customer</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="SO">SO</string>
    <string name="sales_report">Sales Report</string>
    <string name="ticket_no_name">Ticket #/Name</string>

    <string name="cancel">Cancel</string>
    <string name="add_item">Add An Item</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="main">Main</string>
    <string name="one">1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="company">Company</string>
    <string name="taxable">Taxable</string>
    <string name="loyalty_number">Loyalty Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="address">Address</string>
    <string name="billing_city">Billing City</string>
    <string name="billing_state">Billing State</string>
    <string name="billing_street">Billing Street</string>
    <string name="billing_zip">Billing Zip</string>
    <string name="shipping_city">Shipping City</string>
    <string name="shipping_country">Shipping Country</string>
    <string name="shipping_state">Shipping State</string>
    <string name="shipping_street">Shipping Street</string>
    <string name="shipping_zip">Shipping Zip</string>
    <string name="price_level">Price Level</string>
    <string name="sales_rep">Sales Rep</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="comment">Comments</string>
    <string name="add_customer">Add Customer</string>
    <string name="tenderd">Tenderd</string>
    <string name="change">Change</string>
</resources>
