<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_secondary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/add_customer"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="normal"

                    />

                <Button
                    android:id="@+id/save_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="normal" />

            </RelativeLayout>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/topbar"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="20sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp">

                    <EditText
                        android:id="@+id/firstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp">

                    <EditText
                        android:id="@+id/lastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp">

                    <EditText
                        android:id="@+id/company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/company"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp">

                    <EditText
                        android:id="@+id/Email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_id"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>


                <Switch
                    android:id="@+id/taxable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="13sp"
                    android:paddingEnd="10sp"
                    android:text="@string/taxable" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp">

                    <EditText
                        android:id="@+id/loyaltyNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/loyalty_number"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp">

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:inputType="phone" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp">

                    <EditText
                        android:id="@+id/mobilePhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_phone"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp">

                    <EditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp">

                    <EditText
                        android:id="@+id/billingCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/billing_city"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:hint="Billing Country"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp" />

                <Spinner
                    android:id="@+id/billingCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:inputType="text" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp">

                    <EditText
                        android:id="@+id/billingState"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/billing_state"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp">

                    <EditText
                        android:id="@+id/billingStreet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/billing_street"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp">

                    <EditText
                        android:id="@+id/billingZip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/billing_zip"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp">

                    <EditText
                        android:id="@+id/shippingCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/shipping_city"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:hint="Shipping Country"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp" />

                <Spinner
                    android:id="@+id/shippingCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:hint="@string/shipping_country"
                    android:inputType="text" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp">

                    <EditText
                        android:id="@+id/shippingState"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/shipping_state"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp">

                    <EditText
                        android:id="@+id/shippingStreet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/shipping_street"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp">

                    <EditText
                        android:id="@+id/shippingZip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/shipping_zip"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:hint="Price Level"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp" />

                <Spinner
                    android:id="@+id/priceLevel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:hint="@string/price_level"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:hint="Sales Rep"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp" />

                <Spinner
                    android:id="@+id/salesRep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:hint="@string/sales_rep"
                    android:inputType="text" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp">

                    <EditText
                        android:id="@+id/dateOfBirth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:hint="@string/date_of_birth"
                        android:inputType="none" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp">

                    <EditText
                        android:id="@+id/etMessageBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:autoLink="all"
                        android:gravity="top|left"
                        android:hint="@string/comment"
                        android:inputType="textMultiLine|textCapSentences"
                        android:lines="5"
                        android:maxLines="10"
                        android:minLines="1"
                        android:scrollbars="none" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</ScrollView>